add FAQ to support

--- a/support/index.html
+++ b/support/index.html
@@ -2,7 +2,12 @@
     <head></head>
     <body>
         <h2>How to use Pengoo?</h2>
-        Ask yourself a yes-no question and tap the pengoo!
+        Ask yourself a yes-no question and tap the pengoo!<br/>
         Pengoo will give you an answer. The App is used like a coin flip.
+        <h2>FAQ</h2>
+        <h3>Question</h3>
+            Pengoo took a decision that turned out bad. Can I be angry at Pengoo?
+        <h3>Answer</h3>
+            Look deeply into Pengoo's eyes. Can you really be angry?
     </body>
 </html>
